Pengadaan Detail, dan Pengadaan Detail Terbuka

--- a/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
@@ -455,7 +455,7 @@
 
                                                                     </div>
 
-                                                                    <div class="row only-ga-team">
+                                                                    <div class="row bingkai-pic-pelaksanaan">
                                                                         <div class="col-md-4">
                                                                             <div class="form-group ">
                                                                                 <label class="title">Next Step</label>
@@ -463,7 +463,7 @@
                                                                         </div>
                                                                     </div>
                                                                     <hr />
-                                                                    <div class="row only-ga-team">
+                                                                    <div class="row bingkai-pic-pelaksanaan">
                                                                         <div class="col-md-4">
                                                                             <div class="form-group">
                                                                                 <label class="title">Tanggal Submit Penawaran</label>
@@ -477,7 +477,7 @@
                                                                             </div>
                                                                         </div>
                                                                     </div>
-                                                                    <div class="row only-ga-team">
+                                                                    <div class="row bingkai-pic-pelaksanaan">
                                                                         <div class="col-md-2">
                                                                             <div class="form-group">
                                                                                 <button id="btn-next-submit-penawaran" class="btn btn-success pull-left next-step" attrStatus="AANWIJZING" elDari="#next-submit-dari" elSampai="#next-submit-sampai" disabled="disabled">Save&NextStep</button>
@@ -515,7 +515,7 @@
                                                                     <div class="row bingkai-SUBMITPENAWARAN">
                                                                     </div>
 
-                                                                    <div class="row only-ga-team">
+                                                                    <div class="row bingkai-pic-pelaksanaan">
                                                                         <div class="col-md-4">
                                                                             <div class="form-group ">
                                                                                 <label class="title">Next Step</label>
@@ -523,7 +523,7 @@
                                                                         </div>
                                                                     </div>
                                                                     <hr />
-                                                                    <div class="row only-ga-team">
+                                                                    <div class="row bingkai-pic-pelaksanaan">
                                                                         <div class="col-md-4">
                                                                             <div class="form-group">
                                                                                 <label class="title">Tanggal Buka Amplop</label>
@@ -537,7 +537,7 @@
                                                                             </div>
                                                                         </div>
                                                                     </div>
-                                                                    <div class="row only-ga-team">
+                                                                    <div class="row bingkai-pic-pelaksanaan">
                                                                         <div class="col-md-2">
                                                                             <div class="form-group">
                                                                                 <button id="btn-next-buka-amplop" class="btn btn-success pull-left next-step" attrStatus="SUBMITPENAWARAN" elDari="#next-buka-amplop-dari" elSampai="#next-buka-amplop-sampai" disabled="disabled">Save&NextStep</button>
@@ -633,7 +633,7 @@
                                                                             </div>
                                                                         </div>
                                                                     </div>
-                                                                    <div class="row only-ga-team">
+                                                                    <div class="row bingkai-pic-pelaksanaan">
                                                                         <div class="col-md-4">
                                                                             <div class="form-group ">
                                                                                 <label class="title">Next Step</label>
@@ -641,7 +641,7 @@
                                                                         </div>
                                                                     </div>
                                                                     <hr />
-                                                                    <div class="row only-ga-team">
+                                                                    <div class="row bingkai-pic-pelaksanaan">
                                                                         <div class="col-md-4">
                                                                             <div class="form-group">
                                                                                 <label class="title">Tanggal Klarifikasi dan Negosiasi</label>
@@ -655,7 +655,7 @@
                                                                             </div>
                                                                         </div>
                                                                     </div>
-                                                                    <div class="row only-ga-team">
+                                                                    <div class="row bingkai-pic-pelaksanaan">
                                                                         <div class="col-md-2">
                                                                             <div class="form-group">
                                                                                 <button id="btn-next-penilaian" class="btn btn-success pull-left next-step " attrStatus="BUKAAMPLOP" elDari="#next-klarifikasi-dari" elSampai="#next-klarifikasi-sampai" disabled="disabled">Save&NextStep</button>
