--- a/Reston.EProc.Runner.IIS/View/pengadaan-terbuka-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-terbuka-detail.html
@@ -432,7 +432,7 @@
 
                                                                     </div>
 
-                                                                    <div class="row only-ga-team">
+                                                                    <div class="row bingkai-pic-pelaksanaan">
                                                                         <div class="col-md-4">
                                                                             <div class="form-group ">
                                                                                 <label class="title">Next Step</label>
@@ -440,7 +440,7 @@
                                                                         </div>
                                                                     </div>
                                                                     <hr />
-                                                                    <div class="row only-ga-team">
+                                                                    <div class="row bingkai-pic-pelaksanaan">
                                                                         <div class="col-md-4">
                                                                             <div class="form-group">
                                                                                 <label class="title">Tanggal Aanwijzing</label>
@@ -448,7 +448,7 @@
                                                                             </div>
                                                                         </div>
                                                                     </div>
-                                                                    <div class="row only-ga-team">
+                                                                    <div class="row bingkai-pic-pelaksanaan">
                                                                         <div class="col-md-2">
                                                                             <div class="form-group">
                                                                                 <button id="btn-next-jadwal-aawijzing" class="btn btn-success pull-left next-step action-pelaksanaan" attrStatus="DISETUJUI" elDari="#next-aanwijing-dari" elSampai="" disabled="disabled">Save&NextStep</button>
@@ -540,7 +540,7 @@
 
                                                                     </div>
 
-                                                                    <div class="row only-ga-team">
+                                                                    <div class="row bingkai-pic-pelaksanaan">
                                                                         <div class="col-md-4">
                                                                             <div class="form-group ">
                                                                                 <label class="title">Next Step</label>
@@ -548,7 +548,7 @@
                                                                         </div>
                                                                     </div>
                                                                     <hr />
-                                                                    <div class="row only-ga-team">
+                                                                    <div class="row bingkai-pic-pelaksanaan">
                                                                         <div class="col-md-4">
                                                                             <div class="form-group">
                                                                                 <label class="title only-pic-disabled">Tanggal Submit Penawaran</label>
@@ -562,7 +562,7 @@
                                                                             </div>
                                                                         </div>
                                                                     </div>
-                                                                    <div class="row only-ga-team">
+                                                                    <div class="row bingkai-pic-pelaksanaan">
                                                                         <div class="col-md-2">
                                                                             <div class="form-group">
                                                                                 <button id="btn-next-submit-penawaran" class="btn btn-success pull-left next-step"  attrStatus="AANWIJZING" elDari="#next-submit-dari" elSampai="#next-submit-sampai" disabled="disabled">Save&NextStep</button>
@@ -599,7 +599,7 @@
                                                                     </div>
                                                                     <div class="row bingkai-SUBMITPENAWARAN" >
                                                                     </div>
-                                                                    <div class="row only-ga-team">
+                                                                    <div class="row bingkai-pic-pelaksanaan">
                                                                         <div class="col-md-4">
                                                                             <div class="form-group ">
                                                                                 <label class="title">Next Step</label>
@@ -607,7 +607,7 @@
                                                                         </div>
                                                                     </div>
                                                                     <hr />
-                                                                    <div class="row only-ga-team">
+                                                                    <div class="row bingkai-pic-pelaksanaan">
                                                                         <div class="col-md-4">
                                                                             <div class="form-group">
                                                                                 <label class="title">Tanggal Buka Amplop</label>
@@ -621,7 +621,7 @@
                                                                             </div>
                                                                         </div>
                                                                     </div>
-                                                                    <div class="row only-ga-team">
+                                                                    <div class="row bingkai-pic-pelaksanaan">
                                                                         <div class="col-md-2">
                                                                             <div class="form-group">
                                                                                 <button id="btn-next-buka-amplop" class="btn btn-success pull-left next-step" elDari="#next-buka-amplop-dari" attrStatus="SUBMITPENAWARAN" elSampai="#next-buka-amplop-sampai" disabled="disabled">Save&NextStep</button>
@@ -715,7 +715,7 @@
                                                                             </div>
                                                                         </div>
                                                                     </div>
-                                                                    <div class="row only-ga-team">
+                                                                    <div class="row bingkai-pic-pelaksanaan">
                                                                         <div class="col-md-4">
                                                                             <div class="form-group ">
                                                                                 <label class="title">Next Step</label>
@@ -723,7 +723,7 @@
                                                                         </div>
                                                                     </div>
                                                                     <hr />
-                                                                    <div class="row only-ga-team">
+                                                                    <div class="row bingkai-pic-pelaksanaan">
                                                                         <div class="col-md-4">
                                                                             <div class="form-group">
                                                                                 <label class="title">Tanggal Klarifikasi & Negosiasi</label>
@@ -737,7 +737,7 @@
                                                                             </div>
                                                                         </div>
                                                                     </div>
-                                                                    <div class="row only-ga-team">
+                                                                    <div class="row bingkai-pic-pelaksanaan">
                                                                         <div class="col-md-2">
                                                                             <div class="form-group">
                                                                                 <button id="btn-next-penilaian" class="btn btn-success pull-left next-step" elDari="#next-penilaian-dari" attrStatus="BUKAAMPLOP" elSampai="#next-penilaian-sampai" disabled="disabled">Save&NextStep</button>
@@ -830,7 +830,7 @@
                                                                         </div>
 
                                                                     </div>
-                                                                    <div class="row only-ga-team">
+                                                                    <div class="row bingkai-pic-pelaksanaan">
                                                                         <div class="col-md-4">
                                                                             <div class="form-group ">
                                                                                 <label class="title">Next Step</label>
@@ -838,7 +838,7 @@
                                                                         </div>
                                                                     </div>
                                                                     <hr />
-                                                                    <div class="row only-ga-team">
+                                                                    <div class="row bingkai-pic-pelaksanaan">
                                                                         <div class="col-md-2">
                                                                             <div class="form-group">
                                                                                 <button id="btn-next-klarifikasi" class="btn btn-success pull-left next-step" attrstatus="KLARIFIKASI" eldari="#next-pemenang-dari" elsampai="#next-pemenang-sampai" disabled="disabled">NextStep</button>
@@ -968,7 +968,7 @@
                                                                         </div>
 
                                                                     </div>
-                                                                    <div class="row only-ga-team">
+                                                                    <div class="row bingkai-pic-pelaksanaan">
                                                                         <div class="col-md-4">
                                                                             <div class="form-group ">
                                                                                 <label class="title">Next Step</label>
@@ -990,7 +990,7 @@
                                                                             </div>
                                                                         </div>
                                                                     </div>-->
-                                                                    <div class="row only-ga-team">
+                                                                    <div class="row bingkai-pic-pelaksanaan">
                                                                         <div class="col-md-2">
                                                                             <div class="form-group">
                                                                                 <button class="btn btn-success pull-left next-step" attrstatus="KLARIFIKASILANJUTAN" eldari="#next-penilaian-dari" elsampai="#next-penilaian-sampai" disabled="disabled">NextStep</button>
@@ -1078,7 +1078,7 @@
                                                                         </div>
                                                                     </div>
                                                                     <hr />
-                                                                    <div class="row">
+                                                                    <!--<div class="row only-ga-team">
                                                                         <div class="col-md-4">
                                                                             <div class="form-group">
                                                                                 <label class="title">Tanggal Pemenang</label>
@@ -1091,11 +1091,11 @@
                                                                                 <input id="next-pemenang-sampai" type="text" class="form-control dateJadwal">
                                                                             </div>
                                                                         </div>
-                                                                    </div>
+                                                                    </div>-->
                                                                     <div class="row">
                                                                         <div class="col-md-2">
                                                                             <div class="form-group">
-                                                                                <button id="btn-next-klarifikasi" class="btn btn-success pull-left next-step" attrstatus="PENILAIAN" eldari="#next-pemenang-dari" elsampai="#next-pemenang-sampai" disabled="disabled">Save&NextStep</button>
+                                                                                <button id="btn-next-klarifikasi" class="btn btn-success pull-left next-step" attrstatus="PENILAIAN" eldari="#next-pemenang-dari" elsampai="#next-pemenang-sampai" disabled="disabled">NextStep</button>
                                                                             </div>
                                                                         </div>
                                                                         <!--<div class="col-md-2">
@@ -1234,7 +1234,7 @@
                                                                              <div class="row">
                                                                                 <div class="col-md-4">
                                                                                         <div class="form-group">
-                                                                                            <button class="btn btn-success pull-left ajukan-pemenang">Ajukan Pemenang</button>
+                                                                                            <button class="btn btn-success pull-left ajukan-pemenang action-pelaksanaan">Ajukan Pemenang</button>
                                                                                             <label class="status-persetujuan-pemenang"></label>
                                                                                         </div>
                                                                                     </div>
