--- a/Reston.EProc.Runner.IIS/View/anggaran.html
+++ b/Reston.EProc.Runner.IIS/View/anggaran.html
@@ -93,7 +93,7 @@
                     <div class="box-body form-horizontal">
                         <div class="box">
                             <div class="box-header with-border">
-                                <h3 class="box-title">Cari Berdasarkan</h3>
+                                <h3 class="box-title">Upload File Anggaran</h3>
                                 <div class="box-tools pull-right">
                                 </div>
                             </div>
@@ -102,35 +102,16 @@
                                     <div class="col-md-12">
                                         <form class="form-horizontal label-kanan import">
                                             <div class="form-group">
-                                                <label for="exampleInputFile" class="col-sm-2">File Anggaran</label>
-                                                <input type="file" id="import-anggaran" name="upload">
-                                                <p class="help-block col-sm-2">Import Excel.</p>
-                                                <input type="submit" value="Upload" class="btn btn-default" />
+                                                <div class="col-md-6" style="margin-top:30px;">
+                                                    <div class="col-md-8" style="margin-left:20px;">
+                                                        <label>Upload File Exel</label>
+                                                    <input type="file" id="import-anggaran" name="upload" style="margin-top:10px;">
+                                                </div>
+                                                </div>
+                                                <div class="col-md-6">
+                                                </div>
                                             </div>
                                         </form>
-                                            <div class="form-group">
-                                                <label class="col-sm-2 control-label">Search</label>
-                                                <div class="col-sm-4">
-                                                    <input type="text" class="form-control" style="width:100%" />
-                                                    <br />
-                                                    <button id="cari" class="btn btn-primary " type="submit"><span class="fa fa-search"></span> Cari</button>
-                                                </div>
-                                                <div class="col-sm-5">
-                                                    <img src="dist/img/DiagramPlot.jpg" width="400px" height="300px" />
-                                                </div>
-                                            </div>
-                                            <div class="form-group">
-                                                <div class="">
-
-                                                </div>
-                                            </div>
-                                       
-                                    </div>
-                                </div>
-                                <div class="row ">
-                                    <div class="col-md-12">
-                                        <div class="submitgray button-row">
-                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -159,12 +140,12 @@
             </section><!-- /.content -->
         </div><!-- /.content-wrapper -->
 
-        <footer class="main-footer">
-            <!--<div class="pull-right hidden-xs">
+        <!--<footer class="main-footer">
+            <div class="pull-right hidden-xs">
               <b>Version</b> 1.0.0
             </div>
-            <strong>Supplier Relation Management</strong> -->
-        </footer>
+            <strong>Supplier Relation Management</strong> 
+        </footer>-->
     </div><!-- ./wrapper -->
 
     <div id="DeleteModal" class="modal fade" role="dialog">
