--- a/MTF_x/Views/Shared/_Layout2.cshtml
+++ b/MTF_x/Views/Shared/_Layout2.cshtml
@@ -78,7 +78,7 @@
                         <li id="menu3"><a href="@Url.Action("Contact","Home")">Kontak Kami</a></li>
                         @if (!Request.IsAuthenticated){
                         <li id="menu4"><a href="@ViewBag.ProcUrl/registrasi.html">Registrasi</a></li>
-                        <li id="menu5"><a href="Login">Login</a></li>
+                        <li id="menu5"><a href="localhost:7348/Login.html">Login</a></li>
                         }
                         @if (Request.IsAuthenticated)
                         {
