perubahan penambahan keterangan menyetujui atau menolak di approval history

--- a/Reston.EProc.Runner.IIS/View/approval-persetujuan-pemenang-belum-disetujui.html
+++ b/Reston.EProc.Runner.IIS/View/approval-persetujuan-pemenang-belum-disetujui.html
@@ -199,15 +199,15 @@
         </div><!-- /.modal -->
 
     <!-- Modal -->
-    <div class="modal" id="modal_history_approval" role="dialog" aria-hidden="true">
+    <div class="modal" id="modal_history_approval" role="dialog" aria-hidden="true" >
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     <h4 class="modal-title" id="TitleKonfirmasi">Approval Histroy</h4>
                 </div>
-                <div class="modal-body">
-                    <table class="table table-bordered table-striped table-responsive" id="table-history-approval" style="margin-top:20px; ">
+                <div class="modal-body table-responsive">
+                    <table class="table table-bordered table-striped " id="table-history-approval" style="margin-top:20px; ">
                         <thead>
                             <tr>
                                 <th>User</th>
