--- a/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
@@ -1176,13 +1176,20 @@
                                                                     <div class="row bingkai-spk">
                                                                         <div class="col-md-10">
                                                                             <div class="row">
-                                                                                <div class="col-md-4">
+                                                                                <div class="col-md-12">
                                                                                     <div class="form-group">
                                                                                         <label class="title only-ga-team">Tanggal SPK</label>
                                                                                         <input id="input-ba-spk" type="text" class="form-control dateJadwalNoTime only-pic-disabled">
                                                                                     </div>
-                                                                                    <div class="form-group">
+                                                                                </div>
+                                                                            </div>
+                                                                            <div class="row">
+                                                                                <div class="col-lg-12">
+                                                                                    <div class="form-group col-md-4">
                                                                                         <button class="btn btn-success pull-left save-tgl-ba action-pelaksanaan" attr1="input-ba-spk" attr2="SuratPerintahKerja">Simpan</button>
+                                                                                    </div>
+                                                                                    <div class="form-group only-pic col-md-4 pull-right">
+                                                                                        <button class="btn btn-success pull-left action-pelaksanaan" id="kirim-email" attr2="SuratPerintahKerja">Kirim Email Menang & Kalah</button>
                                                                                     </div>
                                                                                 </div>
                                                                             </div>
